--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "element-tiptap": "^1.26.2",
     "element-ui": "^2.15.5",
     "json-bigint": "^1.0.0",
     "vue": "^2.6.11",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
